[project]
# The name of the connector.
name = "example-connector"

# The version of the connector.
version = "0.0.1"

# Simple description of the connector.
description = "Example basic connector for demo purposes"

# Tenint-based connectors only support python 3.12 or later
# and their images are build against alpine-3.12.
requires-python = ">=3.12"

# Any dependencies that are required to support running the connector.
# The tenint dependency is already supplied for you.
dependencies = [
  "tenint"
]

[project.urls]
# The repository URL for the codebase of the connector.
repository = "https://github.com/example/connector"

# The SVG image logo to use display the marketplace for this connector.
logo = "https://raw.githubusercontent.com/example/connector/refs/head/main/logo.svg"

# The URL that points to any further support information or ticketing.
support = "https://example.com/support"

[[project.authors]]
# Name of the author/owner of the connector
name = "Company, Inc."

# Support contact email for any issues with the connector.
email = "support@example.com"

[project.optional-dependencies]
# Any testing libraries that need to be installed to support
# testing the connector.
testing = []

[tool.tenint.connector]
# The title of the connector as will be displayed in the marketplace
title = "Example Connector"

# The products that the connector supports
tags = ['tvm', 'example']

# The default maximum run time in seconds
timeout = 3600

[tool.tenint.connector.images]
# The x86 64bit connector image path
amd64 = "example/connector"
